create first section

--- a/index.html
+++ b/index.html
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Ngechat</title>
 </head>
+
 <body>
-    <main>
-        
+    <header>
+        <nav class="nav container">
+            <h1 class="nav__logo">Ngechat</h1>
+            <div class="nav__link-wrap">
+                <ul>
+                    <li>
+                        <a class="nav__links" href="#">About</a>
+                    </li>
+                    <li>
+                        <a class="nav__links" href="#">Features</a>
+                    </li>
+                    <li>
+                        <a class="nav__links" href="#">FAQ</a>
+                    </li>
+                    <li>
+                        <a class="nav__links" href="#">Download</a>
+                    </li>
+                </ul>
+                <a href="#" class="nav__button">Sign Up</a>
+            </div>
+        </nav>
+    </header>
+    <main class="main container">
+        <div class="main__content-wrap">
+            <h1 class="main__title">
+                <span>Messaging.</span>
+                <span>In a simple way.</span>
+            </h1>
+            <p class="main__description">Chat with family and friends without being distracted.
+                Fast and simple.</p>
+            <div class="main__button-wrap">
+                <a href="#">Try now</a>
+                <a href="#">Learn more
+                    <img src="./Assets/Images/akar-icons_arrow-right.png" alt="Arrow Icon" aria-hidden="true">
+                </a>
+            </div>
+        </div>
+        <img class="main__image" src="./Assets/Images/mobile preview.png" alt="Preview App" aria-hidden="true">
     </main>
 </body>
+
 </html>
