adjust content section - create new section 'content' - change class name from 'main' to 'content'

--- a/index.html
+++ b/index.html
@@ -33,21 +33,23 @@
         </nav>
     </header>
     <main class="main container">
-        <div class="main__content-wrap">
-            <h1 class="main__title">
-                <span>Messaging.</span>
-                <span>In a simple way.</span>
-            </h1>
-            <p class="main__description">Chat with family and friends without being distracted.
-                Fast and simple.</p>
-            <div class="main__button-wrap">
-                <a href="#">Try now</a>
-                <a href="#">Learn more
-                    <img src="./Assets/Images/akar-icons_arrow-right.png" alt="Arrow Icon" aria-hidden="true">
-                </a>
+        <section class="content">
+            <div class="content__wrap">
+                <h1 class="content__title">
+                    <span>Messaging.</span>
+                    <span>In a simple way.</span>
+                </h1>
+                <p class="content__description">Chat with family and friends without being distracted.
+                    Fast and simple.</p>
+                <div class="content__button-wrap">
+                    <a href="#">Try now</a>
+                    <a href="#">Learn more
+                        <img src="./Assets/Images/akar-icons_arrow-right.png" alt="Arrow Icon" aria-hidden="true">
+                    </a>
+                </div>
             </div>
-        </div>
-        <img class="main__image" src="./Assets/Images/mobile preview.png" alt="Preview App" aria-hidden="true">
+            <img class="content__image" src="./Assets/Images/mobile preview.png" alt="Preview App" aria-hidden="true">
+        </section>
     </main>
 </body>
 
