create 'about' section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,68 @@
             </div>
             <img class="content__image" src="./Assets/Images/mobile preview.png" alt="Preview App" aria-hidden="true">
         </section>
+
+        <section class="about">
+            <div class="about__text-wrap">
+                <h1 class="about__title">Experience First</h1>
+                <p class="about__description">A messenger app designed to enhance your messaging experience</p>
+            </div>
+            <div class="about__card-wrap">
+                <div class="about__image-wrap">
+                    <img class="about__image" src="./Assets/Images/Group 2.png" alt="Fast" aria-hidden="true">
+                    <div class="about__image-description">
+                        <h2>Fast</h2>
+                        <p>Proin amet volutpat, varius in suspendisse et ultricies habitant egestas enim sit eleifend a
+                            etiam.</p>
+                        <div class="about__button-wrap">
+                            <a href="#">
+                                Learn more
+                            </a>
+                            <img src="./Assets/Images/akar-icons_arrow-right.png" alt="Arrow" aria-hidden="true">
+                        </div>
+                    </div>
+                </div>
+                <div class="about__image-wrap">
+                    <img class="about__image" src="./Assets/Images/Simple.png" alt="Simple" aria-hidden="true">
+                    <div class="about__image-description">
+                        <h2>Simple</h2>
+                        <p>Etiam tempor euismod elit amet tortor et mi, facilisis mauris venenatis et fermentum,
+                            consectetur
+                            felis.</p>
+                        <div class="about__button-wrap">
+                            <a href="#">
+                                Learn more
+                            </a>
+                            <img src="./Assets/Images/akar-icons_arrow-right.png" alt="Arrow" aria-hidden="true">
+                        </div>
+                    </div>
+                </div>
+                <div class="about__image-wrap">
+                    <img class="about__image" src="./Assets/Images/responsive.png" alt="Responsive" aria-hidden="true">
+                    <div class="about__image-description">
+                        <h2>Responsive</h2>
+                        <p>Lorem egestas tempus enim pellentesque malesuada pellentesque id accumsan cursus in cursus
+                            senectus nisl maecenas.</p>
+                        <div class="about__button-wrap">
+                            <a href="#">
+                                Learn more
+                            </a>
+                            <img src="./Assets/Images/akar-icons_arrow-right.png" alt="Arrow" aria-hidden="true">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="download">
+            <h1>
+                Start using Ngechat
+                today. Feel the
+                different.
+            </h1>
+            <p>Bring your messaging experience up to the next level.
+                Start by using Ngechat.</p>
+        </section>
     </main>
 </body>
 
