create download section

--- a/index.html
+++ b/index.html
@@ -104,13 +104,24 @@
         </section>
 
         <section class="download">
-            <h1>
-                Start using Ngechat
-                today. Feel the
-                different.
-            </h1>
-            <p>Bring your messaging experience up to the next level.
-                Start by using Ngechat.</p>
+            <img class="download__hero-image" src="./Assets/Images/hero img.png" alt="Preview" aria-hidden="true">
+            <div class="download__text-wrap">
+                <h1 class="download__title">
+                    Start using Ngechat
+                    today. Feel the
+                    different.
+                </h1>
+                <p class="download__description">Bring your messaging experience up to the next level.
+                    Start by using Ngechat.</p>
+                <div class="download__button-wrap">
+                    <a href="#">
+                        <img src="./Assets/Images/download apple 1.png">
+                    </a>
+                    <a href="#">
+                        <img src="./Assets/Images/download googleplay 1.png">
+                    </a>
+                </div>
+            </div>
         </section>
     </main>
 </body>
