create footer section

--- a/index.html
+++ b/index.html
@@ -124,6 +124,34 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer container">
+        <div class="footer__wrap">
+            <div class="footer__description-wrap">
+                <h1 class="footer__title">Ngechat</h1>
+                <p class="footer__description">A fast and simple messaging app to keep you get in touch without being distracted.</p>
+            </div>
+            <ul>
+                <li class="footer__lists">
+                    <a href="#">About</a>
+                </li>
+                <li class="footer__lists">
+                    <a href="#">Features</a>
+                </li>
+                <li class="footer__lists">
+                    <a href="#">FAQ</a>
+                </li>
+                <li class="footer__lists">
+                    <a href="#">Download</a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer__copyright">
+            <p>
+                Designed with &hearts; by <a target="__blank" href="https://www.instagram.com/jauhari_jp">Jauhari JP</a>
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
