--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/responsive.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <title>Ngechat</title>
 </head>
 
@@ -130,7 +130,8 @@
         <div class="footer__wrap">
             <div class="footer__description-wrap">
                 <h1 class="footer__title">Ngechat</h1>
-                <p class="footer__description">A fast and simple messaging app to keep you get in touch without being distracted.</p>
+                <p class="footer__description">A fast and simple messaging app to keep you get in touch without being
+                    distracted.</p>
             </div>
             <ul>
                 <li class="footer__lists">
@@ -149,7 +150,8 @@
         </div>
         <div class="footer__copyright">
             <p>
-                Designed with &hearts; by <a target="__blank" href="https://www.instagram.com/jauhari_jp">Jauhari JP</a>
+                <strong>Designed with &hearts; by</strong> <a target="__blank"
+                    href="https://www.instagram.com/jauhari_jp">Jauhari JP</a>
             </p>
         </div>
     </footer>
