--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
         <div class="footer__copyright">
             <p>
-                <strong>Designed with &hearts; by</strong> <a target="__blank"
+                <strong>Original Design by </strong> <a target="__blank"
                     href="https://www.instagram.com/jauhari_jp">Jauhari JP</a>
             </p>
         </div>
