--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="stylesheet" href="./css/hamburger.css">
     <title>Ngechat</title>
 </head>
 
@@ -14,6 +15,11 @@
     <header>
         <nav class="nav container">
             <h1 class="nav__logo">Ngechat</h1>
+            <div class="nav__hamburger-wrap">
+                <div class="nav__hamburger"><span></span></div>
+                <div class="nav__hamburger"><span></span></div>
+                <div class="nav__hamburger"><span></span></div>
+            </div>
             <div class="nav__link-wrap">
                 <ul>
                     <li>
@@ -155,6 +161,8 @@
             </p>
         </div>
     </footer>
+
+    <script src="./js/hamburger.js"></script>
 </body>
 
 </html>
