fix link default behavior

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <p class="content__description">Chat with family and friends without being distracted.
                     Fast and simple.</p>
                 <div class="content__button-wrap">
-                    <a href="#">Try now</a>
-                    <a href="#">Learn more
+                    <a href="javascript:;">Try now</a>
+                    <a href="javascript:;">Learn more
                         <img src="./Assets/Images/akar-icons_arrow-right.png" alt="Arrow Icon" aria-hidden="true">
                     </a>
                 </div>
@@ -71,7 +71,7 @@
                         <p>Proin amet volutpat, varius in suspendisse et ultricies habitant egestas enim sit eleifend a
                             etiam.</p>
                         <div class="about__button-wrap">
-                            <a href="#">
+                            <a href="javascript:;">
                                 Learn more
                                 <img src="./Assets/Images/akar-icons_arrow-right.png" alt="Arrow" aria-hidden="true">
                             </a>
@@ -86,7 +86,7 @@
                             consectetur
                             felis.</p>
                         <div class="about__button-wrap">
-                            <a href="#">
+                            <a href="javascript:;">
                                 Learn more
                                 <img src="./Assets/Images/akar-icons_arrow-right.png" alt="Arrow" aria-hidden="true">
                             </a>
@@ -100,7 +100,7 @@
                         <p>Lorem egestas tempus enim pellentesque malesuada pellentesque id accumsan cursus in cursus
                             senectus nisl maecenas.</p>
                         <div class="about__button-wrap">
-                            <a href="#">
+                            <a href="javascript:;">
                                 Learn more
                                 <img src="./Assets/Images/akar-icons_arrow-right.png" alt="Arrow" aria-hidden="true">
                             </a>
@@ -121,7 +121,7 @@
                 <p class="download__description">Bring your messaging experience up to the next level.
                     Start by using Ngechat.</p>
                 <div class="download__button-wrap">
-                    <a href="#">
+                    <a href="javascript:;">
                         <img src="./Assets/Images/download apple 1.png">
                     </a>
                     <a href="#">
@@ -141,16 +141,16 @@
             </div>
             <ul>
                 <li class="footer__lists">
-                    <a href="#">About</a>
+                    <a href="javascript:;">About</a>
                 </li>
                 <li class="footer__lists">
-                    <a href="#">Features</a>
+                    <a href="javascript:;">Features</a>
                 </li>
                 <li class="footer__lists">
-                    <a href="#">FAQ</a>
+                    <a href="javascript:;">FAQ</a>
                 </li>
                 <li class="footer__lists">
-                    <a href="#">Download</a>
+                    <a href="javascript:;">Download</a>
                 </li>
             </ul>
         </div>
@@ -161,7 +161,6 @@
             </p>
         </div>
     </footer>
-
     <script src="./js/hamburger.js"></script>
 </body>
 
